<resources>
    <string name="app_name">正谷会员中心</string>
    <string name="title_home">首页</string>
    <string name="title_cart">购物车</string>
    <string name="title_mine">我的</string>
    <string name="loading_failed">网络加载失败</string>
    <string name="loading">加载中…</string>
    <string name="nomore">没有更多内容了</string>
    <string name="price">价格</string>
    <string name="couponPrice">会员价</string>
    <string name="totalPrice">总价</string>
    <string name="purchase">结算</string>
    <string name="haveNoGoodsInCart">购物车是空的</string>
    <string name="myOrder">我的订单（待开发）</string>
    <string name="userName">卡号</string>
    <string name="password">密码</string>
    <string name="getCode">验证码</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="confirmOrder">下单</string>
    <string name="selectAddress">选择配送地址</string>
    <string name="selectTime">选择配送时间</string>
    <string name="goodsInCart">配送产品信息</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="address_name">收货人姓名</string>
    <string name="address_address1">所在地址</string>
    <string name="address_address2">详细地址</string>
    <string name="address_mobile">手机号码</string>
    <string name="address_phone">固定电话</string>
    <string name="saveAddress">保存地址</string>
    <string name="addAddress">新增地址</string>
    <string name="editAddress">编辑地址</string>
    <string name="cannotAddAddress">已经有5个地址，不能再新增地址</string>
    <string name="orderSuccess">产品订购成功！</string>
    <string name="pleaseSelectAddress">请选择收货地址</string>
    <string name="myInfo">我的信息</string>
    <string name="myOrders">我的订单</string>
    <string name="orderState">订单状态</string>
    <string name="receiverInfo">收件人信息</string>
    <string name="deliveryGoods">配送产品列表</string>
    <string name="orderDetail">订单详情</string>
    <string name="viewDetail">查看订单详情</string>
</resources>