<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewPurchase"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow>
                <TextView
                    android:text="@string/address_name"
                    android:layout_width="wrap_content"/>
                <EditText
                    android:id="@+id/address_name"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/address_address1"/>
                <Spinner
                    android:id="@+id/address_province"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownVerticalOffset="50dp"/>
            </TableRow>
            <TableRow>
                <Spinner
                    android:id="@+id/address_city"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownVerticalOffset="50dp"
                    android:layout_column="1"/>
            </TableRow>
            <TableRow>
                <Spinner
                    android:id="@+id/address_zone"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownVerticalOffset="50dp"
                    android:layout_column="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/address_address2"/>
                <EditText
                    android:id="@+id/address_address"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/address_mobile"/>
                <EditText
                    android:id="@+id/address_mobile"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/address_phone"/>
                <EditText
                    android:id="@+id/address_phone"
                    android:singleLine="true"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/saveAddress"
                    android:text="@string/saveAddress"
                    android:layout_span="2"
                    android:onClick="saveAddress"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/orderSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/cardMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/deliveryTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/orderNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/viewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewDetail"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>