<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/login_bg">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tableLayout">
            <TableRow>
                <TextView
                    android:text="@string/userName"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/userNameET"
                    android:inputType="numberSigned"
                    android:layout_width="200dp"
                    android:layout_span="2"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/password"
                    android:gravity="center"
                    android:singleLine="false"/>
                <EditText
                    android:id="@+id/passwordET"
                    android:inputType="numberPassword"
                    android:layout_span="2"
                    android:maxLines="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/getCode"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/getCodeET"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"/>
                <ImageView
                    android:id="@+id/getGode"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:onClick="loadGetCode"/>
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_span="3"
                    android:text="@string/login"
                    android:background="@drawable/button_bg"
                    android:textColor="@android:color/white"
                    android:layout_margin="20dp"
                    android:onClick="login"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>