<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalPrice"
                android:layout_toLeftOf="@id/totalPrice"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/purchase"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/haveNoGoodsInCart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/haveNoGoodsInCart"
        android:textSize="20sp"
        android:gravity="center_vertical|center_horizontal"/>
</LinearLayout>